--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "npm": "~9"
   },
   "dependencies": {
-    "@types/wordpress__edit-post": "^7.5.0",
-    "@types/wordpress__editor": "^13.6.2",
-    "@wordpress/components": "^25.2.0",
-    "@wordpress/data": "^9.6.0",
-    "@wordpress/edit-post": "^7.13.0",
-    "@wordpress/editor": "^13.13.0",
-    "@wordpress/element": "^5.13.0",
-    "@wordpress/plugins": "^6.4.0",
-    "@wordpress/scripts": "^26.7.0"
+    "@types/wordpress__edit-post": "^7.5.3",
+    "@types/wordpress__editor": "^13.6.4",
+    "@wordpress/components": "^25.9.0",
+    "@wordpress/data": "^9.13.0",
+    "@wordpress/edit-post": "^7.20.0",
+    "@wordpress/editor": "^13.20.0",
+    "@wordpress/element": "^5.20.0",
+    "@wordpress/plugins": "^6.11.0",
+    "@wordpress/scripts": "^26.14.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
